--- a/ADO.NET/CustomerManager/CustomerManager.csproj
+++ b/ADO.NET/CustomerManager/CustomerManager.csproj
@@ -90,6 +90,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CodeFirst\CodeFirst.csproj">
+      <Project>{179CF861-CB38-4C91-9230-A5E7BC3A80A0}</Project>
+      <Name>CodeFirst</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
