--- a/ADO.NET/LINQsqlSproc/LINQsqlSproc.csproj
+++ b/ADO.NET/LINQsqlSproc/LINQsqlSproc.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F93D9553-962B-4E7F-ADEF-E586DED140CA}</ProjectGuid>
+    <ProjectGuid>{1895B1BF-86E4-4403-B2B6-926C719F133B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>LINQsql_1</RootNamespace>
-    <AssemblyName>LINQsql_1</AssemblyName>
+    <RootNamespace>LINQsqlSproc</RootNamespace>
+    <AssemblyName>LINQsqlSproc</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -47,14 +47,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Customer.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Order.cs" />
+    <Compile Include="northwind.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
